--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ h1 { margin-bottom: 5px; }
 .guide { color: #777; margin-top: 20px; }
 input { width: 100%; padding: 10px; font-size: 16px; margin: 10px 0; }
 table { width: 100%; border-collapse: collapse; display: none; }
-th, td { border: 1px solid #ccc; padding: 8px; font-size: 14px; }
+th, td { border: 1px solid #ccc; padding: 8px; font-size: 14px; text-align: left; }
 th { background: #f2f2f2; }
 </style>
 </head>
@@ -30,7 +30,7 @@ th { background: #f2f2f2; }
 총 도서 보유 수: 0권
 </div>
 
-<input type="text" id="search" placeholder="도서명 · 저자 · 출판사 검색">
+<input type="text" id="search" placeholder="도서번호 · 도서명 · 저자 · 출판사 검색">
 
 <div class="guide" id="guide">
 검색어를 입력하면 도서목록이 표시됩니다.
@@ -39,6 +39,7 @@ th { background: #f2f2f2; }
 <table id="table">
 <thead>
 <tr>
+  <th>도서번호</th>
   <th>도서명</th>
   <th>저자</th>
   <th>출판사</th>
@@ -61,7 +62,7 @@ fetch('도서목록.csv')
       .split('\n')
       .slice(1)
       .map(r => r.split(','))
-      .filter(r => r.length >= 3);
+      .filter(r => r.length >= 4);
 
     document.getElementById('bookCount').innerText =
       `총 도서 보유 수: ${rows.length}권`;
@@ -85,6 +86,7 @@ function render(data) {
       <td>${r[0]}</td>
       <td>${r[1]}</td>
       <td>${r[2]}</td>
+      <td>${r[3]}</td>
     `;
     body.appendChild(tr);
   });
